--- a/style.css
+++ b/style.css
@@ -1,6 +1,11 @@
 *{
     box-sizing: border-box;
 }
+h1{
+    text-align: center;
+    font-size:20px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
 .container{
     display:grid;
     grid-template-columns:repeat(4,1fr) ;
